--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         localStorage.setItem('s', JSON.stringify(score));
         document.querySelector('.result').innerText = `Win: 0 Lose: 0 Tie: 0`;
     ">Reset Score</button>
+    <button onclick="AutoPlay()" style="height: 30px; width: 200px; font-size: 20px;">AutoPlay</button>
 
     <script>
         let score = JSON.parse(localStorage.getItem('s'));
@@ -61,6 +62,24 @@
                 lose: 0,
                 tie: 0
             };
+        }
+        
+        let autoplay = false;
+        let IntervalId;
+        function AutoPlay() {
+            if(!autoplay) {
+               IntervalId = setInterval(function () {
+                    let autoMove = Math.random();
+                    if(autoMove >= 0 && autoMove < 1/ 3) fun('Rock');
+                    else if(autoMove >= 1/3 && autoMove < 2 / 3) fun('Paper');
+                    else fun('Scissors');
+               } , 1000);
+               autoplay = true;
+            }
+            else {
+                autoplay = false;
+                clearInterval(IntervalId);
+            }
         }
 
         function printMoves (your , computer) {
